# flutter_fd_utils

./: .metadata  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
.github/workflows/: build-examples.yml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/res/values/: strings.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/integration_test/: plugin_integration_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/linux/runner/: my_application.cc
example/test/: widget_test.dart
ios/: flutter_fd_utils.podspec
ios/Classes/: FdDebugReporter.h  FdDebugReporter.m  FlutterFdUtilsPlugin.h  FlutterFdUtilsPlugin.m  FlutterFdUtilsPlugin.swift
lib/: flutter_fd_utils.dart  flutter_fd_utils_method_channel.dart  flutter_fd_utils_platform_interface.dart
lib/src/: fd_info.dart  fd_report_dialog.dart  nofile_limit.dart  nofile_limit_result.dart
linux/: CMakeLists.txt  flutter_fd_utils_plugin.cc  flutter_fd_utils_plugin_private.h
linux/include/flutter_fd_utils/: flutter_fd_utils_plugin.h
linux/test/: flutter_fd_utils_plugin_test.cc
macos/: flutter_fd_utils.podspec
macos/Classes/: FdDebugReporter.m  FlutterFdUtilsPlugin.h  FlutterFdUtilsPlugin.m  FlutterFdUtilsPlugin.swift
test/: flutter_fd_utils_method_channel_test.dart  flutter_fd_utils_test.dart
(+8 files in other folders)
